modifications to the index.html file and made the links coherent

--- a/html/CWAD_activites.html
+++ b/html/CWAD_activites.html
@@ -30,7 +30,7 @@
    
     <!-- barre de navigation -->
     <nav class="navigation" >
-		<a href="CWAD_accueil.html"><img class="logo_yumeton" src="../images/yumeton_petit_format.png" alt="YUMETON"></a>
+		<a href="index.html"><img class="logo_yumeton" src="../images/yumeton_petit_format.png" alt="YUMETON"></a>
 		<div class="nav_elements">
 			<a class="ici" href="CWAD_activites.html">Activités</a>
 			<a href="CWAD_contact.html">Contactez-nous</a>
