--- a/html/CWAD_contact.html
+++ b/html/CWAD_contact.html
@@ -30,7 +30,7 @@
    
     <!-- barre de navigation -->
     <nav class="navigation">
-		<a href="CWAD_accueil.html"><img class="logo_yumeton" src="../images/yumeton_petit_format.png" alt="YUMETON"></a>
+		<a href="index.html"><img class="logo_yumeton" src="../images/yumeton_petit_format.png" alt="YUMETON"></a>
 		<div class="nav_elements">
 			<a href="CWAD_activites.html">Activités</a>
 			<a class="ici" href="CWAD_contact.html">Contactez-nous</a>
@@ -80,7 +80,7 @@
 		<section id="inscription">
 		<h3 class="titles">Inscrivez-vous!</h3>
         <p>Nous sommes ravis de voir que Yumeton vous plaît tant que ça!</p>
-			<form method="post" action="CWAD_accueil.html">
+			<form method="post" action="index.html">
 				<!---->
 				<label for="u_nom">nom</label>
 				<br>
