--- a/html/CWAD_construction.html
+++ b/html/CWAD_construction.html
@@ -8,7 +8,7 @@
 	<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 
 	<!--liens pour Jannie pour taffer depuis la casa
-	<link rel="stylesheet" href="../styles/CWAD_accueil.css">
+	<link rel="stylesheet" href="../styles/index.css">
 	<link rel="stylesheet" href="../styles/CWAD_nav.css">
 	<link rel="stylesheet" href="../styles/CWAD_header.css">
 	<link rel="stylesheet" href="../styles/CWAD_footer.css">
