another file reorganization

--- a/CWAD_activites.html
+++ b/CWAD_activites.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <title>Y U M E T O N</title>
 	<!--ajout de l'icone d'un onglet-->
-	<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
 	<!--nouveaux liens-->
-	<link rel="stylesheet" href="../css/CWAD_general.css">
-	<link rel="stylesheet" href="../css/CWAD_activites.css">
+	<link rel="stylesheet" href="./css/CWAD_general.css">
+	<link rel="stylesheet" href="./css/CWAD_activites.css">
 
 	<!--j'ajoute la police "monsterrat" qui correspond à peu près à celle du "shatter the void"-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
