--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Y U M E T O N</title>
 
 	<!--ajout de l'icone d'un onglet-->
-	<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
 	<!--j'ajoute la police "monsterrat" qui correspond à peu près à celle du "shatter the void"-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,8 +20,8 @@
 	
 
 	<!--nouveaux liens-->
-	<link rel="stylesheet" href="../css/CWAD_general.css">
-	<link rel="stylesheet" href="../css/index.css">
+	<link rel="stylesheet" href="./css/CWAD_general.css">
+	<link rel="stylesheet" href="./css/index.css">
 
 </head>
 
