--- a/CWAD_construction.html
+++ b/CWAD_construction.html
@@ -5,15 +5,7 @@
     <meta charset="UTF-8">
     <title>Y U M E T O N</title>
 	<!--ajout de l'icone d'un onglet-->
-	<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-
-	<!--liens pour Jannie pour taffer depuis la casa
-	<link rel="stylesheet" href="../styles/index.css">
-	<link rel="stylesheet" href="../styles/CWAD_nav.css">
-	<link rel="stylesheet" href="../styles/CWAD_header.css">
-	<link rel="stylesheet" href="../styles/CWAD_footer.css">
-	<link rel="stylesheet" href="../styles/CWAD_main.css">
-    -->
+	<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
 	<!--j'ajoute la police "monsterrat" qui correspond à peu près à celle du "shatter the void"-->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
