--- a/CWAD_contact.html
+++ b/CWAD_contact.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <title>Y U M E T O N</title>
 	<!--ajout de l'icone d'un onglet-->
-	<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
 	<!--nouveaux liens-->
-	<link rel="stylesheet" href="../css/CWAD_general.css">
-    <link rel="stylesheet" href="../css/CWAD_contact.css">
+	<link rel="stylesheet" href="./css/CWAD_general.css">
+    <link rel="stylesheet" href="./css/CWAD_contact.css">
 
 	<!--j'ajoute la police "monsterrat" qui correspond à peu près à celle du "shatter the void"-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,8 +21,6 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
 
-	 <!--references javascript-->
-	 <script src="../script/CWAD_animations.js"></script>
   </head>
 
   <body>
