modified some problematic links + fixed (hopefully) the responsiveness

--- a/CWAD_activites.html
+++ b/CWAD_activites.html
@@ -21,8 +21,6 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
 
-	 <!--references javascript-->
-	 <script src="../script/CWAD_animations.js"></script>
   </head>
 
   <body>
@@ -30,7 +28,7 @@
    
     <!-- barre de navigation -->
     <nav class="navigation" >
-		<a href="index.html"><img class="logo_yumeton" src="../images/yumeton_petit_format.png" alt="YUMETON"></a>
+		<a href="index.html"><img class="logo_yumeton" src="./images/yumeton_petit_format.png" alt="YUMETON"></a>
 		<div class="nav_elements">
 			<a class="ici" href="CWAD_activites.html">Activités</a>
 			<a href="CWAD_contact.html">Contactez-nous</a>
@@ -53,7 +51,7 @@
 			<div class="activites_web">
 				<article class="discuss">
 					<a href="CWAD_construction.html">
-					<img src="../images/discussion_icon.jpeg" alt="icône de discussion" class="icones">
+					<img src="./images/discussion_icon.jpeg" alt="icône de discussion" class="icones">
 					<h3 class="titles">É C H A N G E Z</h3>
 					<p>Dans cette section, discutez de vos projets de création !</p>
 					<p>Du mal avec une technique, ou à la rrecherche de nouvelles idées dans votre direction artistique ?</p>
@@ -66,7 +64,7 @@
 			<!--page de création-->
 				<article class="create">
 					<a href="CWAD_construction.html">
-					<img src="../images/create_icon.jpeg" alt="icône de création" class="icones">
+					<img src="./images/create_icon.jpeg" alt="icône de création" class="icones">
 					<h3 class="titles">C R É E Z</h3>
 					<p>Ici, créez du contenu de diverses natures librement, mais jamais non inspirés !</p>
 					<p>Trouvez de l'inspiration grâce à notre intelligence artificielle !</p>
@@ -78,7 +76,7 @@
 			<!--page d'apprentissage-->
 				<article class="learn">
 					<a href="CWAD_construction.html">
-					<img src="../images/learn_icon.jpeg" alt="icône d'apprentissage" class="icones">
+					<img src="./images/learn_icon.jpeg" alt="icône d'apprentissage" class="icones">
 					<h3 class="titles">A P P R E N E Z</h3>
 					<p>Il faut bien admettre qu'il est impossible de savoir tout sur tout...</p>
 					<p>Pour autant, ce n'est PAS DU TOUT négatif</p>
@@ -117,7 +115,7 @@
 			<a href="https://youtu.be">rapport pdf</a>
 			<a href="https://youtu.be">rapport docx</a>
 		</div>
-		<img src="../images/iut_orsay.png" alt="logo de l'IUT d'Orsay, notre établissement d'enseignement supérieur." class="logo_orsay">
+		<img src="./images/iut_orsay.png" alt="logo de l'IUT d'Orsay, notre établissement d'enseignement supérieur." class="logo_orsay">
 	</footer>
   
   </body>
