--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    
 	<!-- barre de navigation -->
     <nav class="navigation" id="top">
-		<a href="index.html"><img class="logo_yumeton" src="../images/yumeton_petit_format.png" alt="YUMETON"></a>
+		<a href="index.html"><img class="logo_yumeton" src="./images/yumeton_petit_format.png" alt="YUMETON"></a>
 		<div class="nav_elements">
 			<a href="CWAD_activites.html">Activités</a>
 			<a href="CWAD_contact.html">Contactez-nous</a>
@@ -41,7 +41,7 @@
 	
 <!--header : le message d'accueil de la page -->
     <header>
-        <img src="../images/yumeton_grand_format.png" alt="YUMETON">
+        <img src="./images/yumeton_grand_format.png" alt="YUMETON">
 		<h1 class="titles">Bienvenue sur YUMETON !</h1>
 		<p class="largerText">Sur cette page :</p>
 		<div class="summary">
@@ -116,7 +116,7 @@
 			<a href="../texte/Rapport_CWAD.docx" taerget="_blank">rapport .docx</a>
 			<a href="../texte/Rapport_CWAD.pdf" target="_blank">rapport .pdf</a>
 		</div>
-		<img src="../images/iut_orsay.png" alt="logo de l'IUT d'Orsay, notre établissement d'enseignement supérieur." class="logo_orsay">
+		<img src="./images/iut_orsay.png" alt="logo de l'IUT d'Orsay, notre établissement d'enseignement supérieur." class="logo_orsay">
 	</footer>
   
   </body>
