--- a/CWAD_contact.html
+++ b/CWAD_contact.html
@@ -28,7 +28,7 @@
    
     <!-- barre de navigation -->
     <nav class="navigation">
-		<a href="index.html"><img class="logo_yumeton" src="../images/yumeton_petit_format.png" alt="YUMETON"></a>
+		<a href="index.html"><img class="logo_yumeton" src="./images/yumeton_petit_format.png" alt="YUMETON"></a>
 		<div class="nav_elements">
 			<a href="CWAD_activites.html">Activités</a>
 			<a class="ici" href="CWAD_contact.html">Contactez-nous</a>
@@ -114,7 +114,7 @@
 			<a href="https://youtu.be">rapport pdf</a>
 			<a href="https://youtu.be">rapport docx</a>
 		</div>
-		<img src="../images/iut_orsay.png" alt="logo de l'IUT d'Orsay, notre établissement d'enseignement supérieur." class="logo_orsay">
+		<img src="./images/iut_orsay.png" alt="logo de l'IUT d'Orsay, notre établissement d'enseignement supérieur." class="logo_orsay">
 	</footer>
   
   </body>
