ajout des fichiers | pushing all files

--- a/CWAD_activites.html
+++ b/CWAD_activites.html
@@ -112,8 +112,8 @@
 	<footer>
 		<div class="footer_text">	
 			<p>Site internet d'Indy Ait-Youcef et de Jannie Ngoy Ituka, du groupe 1C</p>
-			<a href="https://youtu.be">rapport pdf</a>
-			<a href="https://youtu.be">rapport docx</a>
+			<a href="./texte/Rapport_CWAD.docx" taerget="_blank">rapport .docx</a>
+			<a href="./texte/Rapport_CWAD.pdf" target="_blank">rapport .pdf</a>
 		</div>
 		<img src="./images/iut_orsay.png" alt="logo de l'IUT d'Orsay, notre établissement d'enseignement supérieur." class="logo_orsay">
 	</footer>
