changement du lien dans la page 'construction' | changed the link in the 'construction' page

--- a/CWAD_construction.html
+++ b/CWAD_construction.html
@@ -30,7 +30,7 @@
 	<!--cette page sert à montrer que le site est toujours en construction-->
 	<main>
 		<p>cette page est toujours en cours de construction, mais elle sera bientôt là !</p>
-		<form action="CWAD_accueil.html">
+		<form action="index.html">
 			<input type="submit" value="retour à la page d'accueil">
 		</form>
 		
